[package]
name = "gym-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.210"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0"
epoll = "4.3.3"
bson = "2.13.0"
nvo_servers = { git = "https://github.com/pirkus/nvo_servers.git", tag = "v0.0.8" }

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]

[dev-dependencies.reqwest]
version = "0.12.8" # until we write our own!
features = ["blocking"]

[dev-dependencies.testcontainers]
version = "0.23.1"
features = ["blocking"]